--- a/package.json
+++ b/package.json
@@ -11,7 +11,14 @@
   },
   "dependencies": {
     "nuxt": "^3.10.2",
+    "sass": "^1.71.1",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
+  },
+  "devDependencies": {
+    "@nuxtjs/style-resources": "^1.2.2",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.1",
+    "typescript": "^5.3.3"
   }
 }
