--- a/package.json
+++ b/package.json
@@ -10,15 +10,23 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.10.2",
+    "nuxt-leaflet": "^0.0.27",
     "sass": "^1.71.1",
+    "vee-validate": "^4.12.6",
     "vue": "^3.4.19",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@nuxtjs/style-resources": "^1.2.2",
     "node-sass": "^9.0.0",
+    "nuxt-simple-sitemap": "^4.4.1",
+    "nuxt3-leaflet": "^1.0.12",
     "sass-loader": "^14.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite-plugin-vuetify": "^2.0.3",
+    "vuetify": "^3.5.8"
   }
 }
