--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "leaflet": "^1.9.4",
     "nuxt": "^3.10.2",
     "nuxt-leaflet": "^0.0.27",
+    "nuxt-mail": "^5.0.0",
     "sass": "^1.71.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.19",
