--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
-    "leaflet": "^1.9.4",
     "nuxt": "^3.10.2",
     "nuxt-leaflet": "^0.0.27",
     "nuxt-mail": "^5.0.0",
@@ -23,6 +22,8 @@
   "devDependencies": {
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/style-resources": "^1.2.2",
+    "@vue-leaflet/vue-leaflet": "^0.10.1",
+    "leaflet": "^1.9.4",
     "node-sass": "^9.0.0",
     "nuxt-purgecss": "^2.0.0",
     "nuxt-simple-sitemap": "^4.4.1",
