--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "nuxt": "^3.10.2",
-    "nuxt-leaflet": "^0.0.27",
     "nuxt-mail": "^5.0.0",
+    "prettier": "^3.2.5",
     "sass": "^1.71.1",
     "vee-validate": "^4.12.6",
     "vue": "^3.4.19",
@@ -22,12 +22,9 @@
   "devDependencies": {
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/style-resources": "^1.2.2",
-    "@vue-leaflet/vue-leaflet": "^0.10.1",
-    "leaflet": "^1.9.4",
     "node-sass": "^9.0.0",
     "nuxt-purgecss": "^2.0.0",
     "nuxt-simple-sitemap": "^4.4.1",
-    "nuxt3-leaflet": "^1.0.12",
     "sass-loader": "^14.1.1",
     "typescript": "^5.3.3",
     "vite-plugin-vuetify": "^2.0.3",
