--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "leaflet": "^1.9.4",
     "nuxt": "^3.10.2",
     "nuxt-mail": "^5.0.0",
     "prettier": "^3.2.5",
