--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@nuxt/image": "^1.4.0",
     "@nuxtjs/style-resources": "^1.2.2",
+    "@rollup/plugin-image": "^3.0.3",
     "node-sass": "^9.0.0",
     "nuxt-purgecss": "^2.0.0",
     "nuxt-simple-sitemap": "^4.4.1",
